objects/TC_Acceptance_Log__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <description>Field to hold the action as whether the T&amp;C has been accepted or declined by the Guest</description>
        <inlineHelpText>Field to hold the action as whether the T&amp;C has been accepted or declined by the Guest</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Term_And_Condition__c</fullName>
        <label>Community Term And Condition</label>
        <referenceTo>Community_TC__c</referenceTo>
        <relationshipLabel>TC Acceptance Logs</relationshipLabel>
        <relationshipName>TC_Acceptance_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TC Acceptance Logs</relationshipLabel>
        <relationshipName>TC_Acceptance_Logs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>TC Acceptance Log</label>
    <nameField>
        <displayFormat>TCLog-{0000}</displayFormat>
        <label>TC Acceptance Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Acceptance Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>